[package]
name = "phishing"
version = "0.0.1-dev"
edition = "2021"
authors = ["holasoyender", "ThePhoDit"]
keywords = ["discord", "phishing", "links", "antispam", "moderation"]
readme = "README.md"
description = "A database with thousands of phishing links for moderating Discord servers."
repository = "https://github.com/Discusss/phishing"
license = "GPL-3"

[workspace]
members = [".", "migration"]

[profile.release]
debug = false
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "migration" }
chrono = { version = "0.4.23", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { version = "0.6.0-alpha2" }
prometheus = { version = "0.13.3" }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
sea-orm = { version = "0.12.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
dotenvy = { version = "0.15.7" }
log = { version = "0.4.19" }
fern = { version = "0.6.2", features = ["colored"] }
validators = { version = "0.24.3" }
tokio_schedule = { version = "0.3.1" }
ureq = { version = "2.7.1", features = ["json", "serde_json"] }